--- a/Administracion/templates/administracion/iniciar_sesion.html
+++ b/Administracion/templates/administracion/iniciar_sesion.html
@@ -77,5 +77,5 @@
     </body>
 {% endblock %}
 {% block scripts %}
-    <script src="../static/js/iniciar-sesion.js"></script>
+    <script src="../../static/js/administracion/iniciar-sesion.js"></script>
 {% endblock %}
