--- a/Administracion/templates/administracion/registrarse.html
+++ b/Administracion/templates/administracion/registrarse.html
@@ -87,5 +87,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="../static/js/registrarse.js"></script>
+    <script src="../../static/js/administracion/registrarse.js"></script>
 {% endblock %}
