--- a/E_Commerce/templates/index.html
+++ b/E_Commerce/templates/index.html
@@ -20,112 +20,6 @@
                 {% block usuario %}{% endblock %}
             </ul>
             <ul class="navbar-item flex-row ml-md-auto">
-                <li class="nav-item dropdown language-dropdown">
-                    <a href="javascript:void(0);" class="nav-link dropdown-toggle" id="language-dropdown"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="{% static 'assets/img/ca.png' %}" class="flag-width" alt="flag">
-                    </a>
-                    <div class="dropdown-menu position-absolute" aria-labelledby="language-dropdown">
-                        <a class="dropdown-item d-flex" href="javascript:void(0);"><img src="{% static 'assets/img/de.png' %}"
-                                                                                        class="flag-width" alt="flag">
-                            <span class="align-self-center">&nbsp;German</span></a>
-                        <a class="dropdown-item d-flex" href="javascript:void(0);"><img src="{% static 'assets/img/jp.png' %}"
-                                                                                        class="flag-width" alt="flag">
-                            <span class="align-self-center">&nbsp;Japanese</span></a>
-                        <a class="dropdown-item d-flex" href="javascript:void(0);"><img src="{% static 'assets/img/fr.png' %}"
-                                                                                        class="flag-width" alt="flag">
-                            <span class="align-self-center">&nbsp;French</span></a>
-                        <a class="dropdown-item d-flex" href="javascript:void(0);"><img src="{% static 'assets/img/ca.png' %}"
-                                                                                        class="flag-width" alt="flag">
-                            <span class="align-self-center">&nbsp;English</span></a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown message-dropdown">
-                    <a href="javascript:void(0);" class="nav-link dropdown-toggle" id="messageDropdown"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                             class="feather feather-mail">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                            <polyline points="22,6 12,13 2,6"></polyline>
-                        </svg>
-                    </a>
-                    <div class="dropdown-menu position-absolute" aria-labelledby="messageDropdown">
-                        <div class="">
-                            <a class="dropdown-item">
-                                <div class="">
-
-                                    <div class="media">
-                                        <div class="user-img">
-                                            <div class="avatar avatar-xl">
-                                                <span class="avatar-title rounded-circle">KY</span>
-                                            </div>
-                                        </div>
-                                        <div class="media-body">
-                                            <div class="">
-                                                <h5 class="usr-name">Kara Young</h5>
-                                                <p class="msg-title">ACCOUNT UPDATE</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </a>
-                            <a class="dropdown-item">
-                                <div class="">
-                                    <div class="media">
-                                        <div class="user-img">
-                                            <img src="{% static 'assets/img/90x90.jpg' %}" class="img-fluid mr-2" alt="avatar">
-                                        </div>
-                                        <div class="media-body">
-                                            <div class="">
-                                                <h5 class="usr-name">Daisy Anderson</h5>
-                                                <p class="msg-title">ACCOUNT UPDATE</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                            <a class="dropdown-item">
-                                <div class="">
-
-                                    <div class="media">
-                                        <div class="user-img">
-                                            <div class="avatar avatar-xl">
-                                                <span class="avatar-title rounded-circle">OG</span>
-                                            </div>
-                                        </div>
-                                        <div class="media-body">
-                                            <div class="">
-                                                <h5 class="usr-name">Oscar Garner</h5>
-                                                <p class="msg-title">ACCOUNT UPDATE</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="nav-item dropdown notification-dropdown">
-                    <a href="javascript:void(0);" class="nav-link dropdown-toggle" id="notificationDropdown"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                             class="feather feather-bell">
-                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-                        </svg>
-                        <span class="badge badge-success"></span>
-                    </a>
-                    <div class="dropdown-menu position-absolute" aria-labelledby="notificationDropdown">
-                        <div class="notification-scroll">
-                            {% block notificaciones %}{% endblock %}
-                        </div>
-                    </div>
-                </li>
-
                 <li class="nav-item dropdown user-profile-dropdown">
                     {% block imagen_usuario %}{% endblock %}
                     <div class="dropdown-menu position-absolute" aria-labelledby="userProfileDropdown">
@@ -134,7 +28,6 @@
                         </div>
                     </div>
                 </li>
-
             </ul>
         </header>
     </div>
@@ -154,7 +47,7 @@
             </a>
             <ul class="navbar-nav flex-row">
                 <li class="nav-item theme-text">
-                    <a href="{% url 'administracion:panel-inicio' %}" class="nav-link"> VPTechnology </a>
+                    <a href="{% url 'administracion:panel-inicio' %}" class="nav-link"> E-Commerce </a>
                 </li>
             </ul>
         </header>
@@ -195,34 +88,7 @@
                         </a>
                         <ul class="collapse submenu list-unstyled" id="opciones-administracion" data-parent="#accordionExample">
                             <li id="opcion-usuarios">
-                                <a href="{% url 'administracion:usuarios-index' %}"> Usuarios </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu">
-                        <a href="#opciones-pqrs" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                            <div class="" id="gestion-pqrs">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                     stroke-linejoin="round" class="feather feather-message-square">
-                                    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-                                </svg>
-                                <span>Gestión PQRS</span>
-                            </div>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                     stroke-linejoin="round" class="feather feather-chevron-right">
-                                    <polyline points="9 18 15 12 9 6"></polyline>
-                                </svg>
-                            </div>
-                        </a>
-                        <ul class="collapse submenu list-unstyled" id="opciones-pqrs" data-parent="#accordionExample">
-                            <li id="opcion-gestionar">
-                                <a href="{% url 'gestion-pqrs:pqrs-index' %}"> Gestionar </a>
-                            </li>
-                            <li id="opcion-registrar">
-                                <a href="{% url 'gestion-pqrs:registrar-pqrs' %}"> Registrar </a>
+                                <a href="{% url 'administracion:usuarios-index' %}"> Clientes </a>
                             </li>
                         </ul>
                     </li>
@@ -239,7 +105,7 @@
                     <p>
                         {{ fecha }}
                         <br><br>
-                        © 2022 VPS Technology. Todos los derechos reservados.
+                        © 2023 E-Commerce. Todos los derechos reservados.
                         <br><br>
                         Cúcuta, Norte de Santander
                     </p>
