feat: Se permite registrar, editar, ver y elimninar una categoría en la plataforma.

--- a/E_Commerce/templates/index.html
+++ b/E_Commerce/templates/index.html
@@ -90,6 +90,9 @@
                             <li id="opcion-usuarios">
                                 <a href="{% url 'administracion:usuarios-index' %}"> Clientes </a>
                             </li>
+                            <li id="opcion-categoria">
+                                <a href="{% url 'administracion:categorias-index' %}"> Categorias </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
