--- a/E_Commerce/templates/index.html
+++ b/E_Commerce/templates/index.html
@@ -93,6 +93,9 @@
                             <li id="opcion-categoria">
                                 <a href="{% url 'administracion:categorias-index' %}"> Categorias </a>
                             </li>
+                            <li id="opcion-productos">
+                                <a href="{% url 'administracion:productos-index' %}"> Productos </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
