feat: Se agrega app de ordenes de compra y se crea el index para visualizar las ordenes realizadas en la plataforma.

--- a/Administracion/templates/administracion/panel_inicio.html
+++ b/Administracion/templates/administracion/panel_inicio.html
@@ -48,7 +48,7 @@
 {% block window %}
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
         <div class="footer-section text-center f-section-1">
-            <img class="align-middle text-center" style="width: 50%; height: 500px" src="{% static 'assets/img/logo.jfif' %}" alt="avatar">
+            <img class="align-middle text-center" style="width: 100%; height: 500px" src="{% static 'assets/img/tienda-virtual.png' %}" alt="avatar">
         </div>
     </div>
 {% endblock %}
