--- a/E_Commerce/templates/index.html
+++ b/E_Commerce/templates/index.html
@@ -98,6 +98,33 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="menu">
+                        <a href="#opciones-ordenes" data-toggle="collapse" aria-expanded="false"
+                           class="dropdown-toggle">
+                            <div class="" id="ordenes-compra">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                     stroke-linejoin="round" class="feather feather-shopping-cart">
+                                    <circle cx="9" cy="21" r="1"></circle>
+                                    <circle cx="20" cy="21" r="1"></circle>
+                                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+                                </svg>
+                                <span>Ordenes Compra</span>
+                            </div>
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                     stroke-linejoin="round" class="feather feather-chevron-right">
+                                    <polyline points="9 18 15 12 9 6"></polyline>
+                                </svg>
+                            </div>
+                        </a>
+                        <ul class="collapse submenu list-unstyled" id="opciones-ordenes" data-parent="#accordionExample">
+                            <li id="opcion-mis-ordenes">
+                                <a href="{% url 'ordenes-compra:ordenes-compra-index' %}"> Mis Ordenes </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
